[gd_scene load_steps=5 format=3 uid="uid://dt1ti218xk7p0"]

[ext_resource type="Script" uid="uid://c0svjdiinxkl4" path="res://scripts/ui/barracks.gd" id="1_roster"]
[ext_resource type="Theme" uid="uid://clyvgadvbeqjg" path="res://themes/game_theme.tres" id="2_theme"]
[ext_resource type="Script" uid="uid://k3o6w26cwvhk" path="res://scripts/ui/components/screen_container.gd" id="3_screen_container"]
[ext_resource type="Texture2D" path="res://assets/ui/backgrounds/barracks_background.png" id="4_barracks_bg"]

[node name="CharacterRoster" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_roster")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_barracks_bg")
expand_mode = 1
stretch_mode = 6

[node name="GradientOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="ScreenContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_screen_container")

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="HeaderContainer" type="VBoxContainer" parent="ScreenContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="ScreenContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 48
text = "Your Survivors"
horizontal_alignment = 1

[node name="SlotLabel" type="Label" parent="ScreenContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 20
text = "0/3 Survivors (Free Tier)"
horizontal_alignment = 1

[node name="CharacterListContainer" type="MarginContainer" parent="ScreenContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="ScreenContainer/VBoxContainer/CharacterListContainer"]
layout_mode = 2
follow_focus = true

[node name="CharacterList" type="GridContainer" parent="ScreenContainer/VBoxContainer/CharacterListContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="ButtonsContainer" type="HBoxContainer" parent="ScreenContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1

[node name="CreateNewButton" type="Button" parent="ScreenContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(280, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Create New Survivor"

[node name="BackButton" type="Button" parent="ScreenContainer/VBoxContainer/ButtonsContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back to Hub"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
